--- a/squelettes/inclure/header.html
+++ b/squelettes/inclure/header.html
@@ -1,15 +1,17 @@
-<div class="header">
-	<div class="logo_caravelle"><!--pour un lien vers accueil-->
-		[<a href="#URL_SITE_SPIP">(#LOGO_SITE_SPIP)</a>]
-	</div>
+<div class="super"><!--pour centrer-->
+	<div class="header">
+		<div class="logo_caravelle"><!--pour un lien vers accueil-->
+			[<a href="#URL_SITE_SPIP">(#LOGO_SITE_SPIP)</a>]
+		</div>
 
-	<div class="titre_caravelle"><!--pour un lien vers accueil-->
-	</div>
+		<div class="titre_caravelle"><!--pour un lien vers accueil-->
+		</div>
 
-	<div class="label">
-	</div>
+		<div class="label">
+		</div>
 
-	<div class="logo_vie_fem"><!--pour un lien vers accueil-->
+		<div class="logo_vie_fem"><!--pour un lien vers accueil-->
+		</div>
 	</div>
+	<!--fin header-->
 </div>
-<!--fin header-->
