--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -43,10 +43,9 @@
 [<link rel="shortcut icon" type="image/x-icon" href="(#CHEMIN{favicon.ico})" />]]
 
 <!--pour la gallerie-->
-<script type="text/javascript" src="js/jquery-1.3.2.js"></script>
-<script type="text/javascript" src="js/jquery.history.js"></script>
-<script type="text/javascript" src="js/jquery.galleriffic.js"></script>
-<script type="text/javascript" src="js/jquery.opacityrollover.js"></script>
+<script type="text/javascript" src="#CHEMIN{js/jquery.history.js}"></script>
+<script type="text/javascript" src="#CHEMIN{js/jquery.galleriffic.js}"></script>
+<script type="text/javascript" src="#CHEMIN{js/jquery.opacityrollover.js}"></script>
 <!-- We only want the thunbnails to display when javascript is disabled -->
 <script type="text/javascript">
 document.write('<style>.noscript { display: none; }</style>');
