--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -42,6 +42,8 @@
 [<link rel="icon" type="image/x-icon" href="(#CHEMIN{favicon.ico})" />
 [<link rel="shortcut icon" type="image/x-icon" href="(#CHEMIN{favicon.ico})" />]]
 
+[<link rel="shortcut icon" type="image/png" href="(#CHEMIN{favicon.png})" />]
+
 <!--pour la gallerie-->
 <script type="text/javascript" src="#CHEMIN{js/jquery.history.js}"></script>
 <script type="text/javascript" src="#CHEMIN{js/jquery.galleriffic.js}"></script>
