--- a/squelettes/inclure/header.html
+++ b/squelettes/inclure/header.html
@@ -11,6 +11,7 @@
 		</div>
 
 		<div class="logo_vie_fem"><!--pour un lien vers accueil-->
+			[<a href="http://viefeminine.be/" title="Vie Féminine - L’égalité pour changer">(#CHEMIN{css/images/logo_vie_fem.jpg}|balise_img)</a>]
 		</div>
 	</div>
 	<!--fin header-->
