--- a/squelettes/liste_evenement.html
+++ b/squelettes/liste_evenement.html
@@ -1,4 +1,3 @@
-<BOUCLE_principale(RUBRIQUES) {id_rubrique}>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 [(#REM) Cf.: http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
 ]<!--[if lt IE 7 ]> <html dir="#LANG_DIR" lang="#LANG" xmlns="http://www.w3.org/1999/xhtml" xml:lang="#LANG" class="[(#LANG_DIR)][ (#LANG)] no-js ie ie6"> <![endif]-->
@@ -9,14 +8,12 @@
 <head>
 	<script type='text/javascript'>/*<![CDATA[*/(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement);/*]]>*/</script>
 	<title>[(#TITRE|couper{80}|textebrut) - ][(#NOM_SITE_SPIP|textebrut)]</title>
-	[<meta name="description" content="(#INTRODUCTION{150}|textebrut)" />]
-	[<link rel="canonical" href="(#URL_RUBRIQUE|url_absolue)" />]
+	[<meta name="description" content="(#INTRODUCTION{150}|attribut_html)" />]
+	[<link rel="canonical" href="(#URL_ARTICLE|url_absolue)" />]
 	<INCLURE{fond=inclure/head} />
-	[(#REM) Lien vers le flux RSS des articles la rubrique ]
-	<link rel="alternate" type="application/rss+xml" title="<:syndiquer_rubrique:>" href="[(#URL_PAGE{backend}|parametre_url{id_rubrique,#ID_RUBRIQUE})]" />
 </head>
 
-<body class="pas_surlignable page_rubrique">
+<body class="pas_surlignable page_article">
 	<div class="background_body">
 		
 		<INCLURE{fond=inclure/header, env}>
@@ -29,8 +26,18 @@
 					<INCLURE{fond=inclure/colonne_gauche, env}>
 
 					<div class="col_princip_article"><!--colonne principale-->
+						<h1>Agenda</h1>
+						<BOUCLE_event(EVENEMENTS){agendafull date_debut,date_fin,jour,(#ENV{date}|annee),(#ENV{date}|mois),(#ENV{date}|jour)}{statut=publie}>
+						<div class="elementAgenda">
+							[<h3><a href="#URL_ARTICLE" title="#TITRE">(#TITRE)</a></h3>]
+							[<p>(#DATE_DEBUT|Agenda_affdate_debut_fin{#DATE_FIN,#HORAIRE})</p>]
+							[<p>(#LIEU)</p>]
+							[(#DESCRIPTIF)]
+						</div>
+						</BOUCLE_event>
 						
 						<div class="fin_article"><!--logo--></div>
+						
 					</div><!--fin colonne principale-->
 
 					<INCLURE{fond=inclure/colonne_droite, env}>
@@ -42,5 +49,3 @@
 	</div>
 </body>
 </html>
-</BOUCLE_principale>[(#INCLURE{fond=404, erreur=<:aucune_rubrique:>})]
-<//B_principale>
