--- a/squelettes/inclure/tous_les_evenements.html
+++ b/squelettes/inclure/tous_les_evenements.html
@@ -1,8 +1,9 @@
 <B_info_evenement>
+<h1>Tout les événements</h1>
 <div class="info_evenement">
-	<BOUCLE_info_evenement(EVENEMENTS){age<0}{id_article}>
+	<BOUCLE_info_evenement(EVENEMENTS){id_rubrique}{age<0}{par date_debut}>
 	<div class="elementAgenda">
-		[<h3>(#TITRE)</h3>]
+		[<h3><a href="#URL_ARTICLE" title="#TITRE">(#TITRE)</a></h3>]
 		[<p>(#DATE_DEBUT|Agenda_affdate_debut_fin{#DATE_FIN,#HORAIRE})</p>]
 		[<p>(#LIEU)</p>]
 		[(#DESCRIPTIF)]
@@ -10,4 +11,5 @@
 	</BOUCLE_info_evenement>
 </div>
 </B_info_evenement>
+<p>Aucun événement disponnible.</p>
 <//B_info_evenement>
