--- a/squelettes/rubrique.html
+++ b/squelettes/rubrique.html
@@ -29,6 +29,7 @@
 					<INCLURE{fond=inclure/colonne_gauche, env}>
 
 					<div class="col_princip_article"><!--colonne principale-->
+						[(#AGENDA|oui) <INCLURE{fond=inclure/tous_les_evenements, env}> ]
 						
 						<div class="fin_article"><!--logo--></div>
 					</div><!--fin colonne principale-->
