--- a/squelettes/article.html
+++ b/squelettes/article.html
@@ -29,6 +29,7 @@
 					<div class="col_princip_article"><!--colonne principale-->
 						[<h1>(#TITRE)</h1>]
 						[<h3>(#LIEU)</h3>]
+						[(#LOGO_ARTICLE|image_reduire{200})]
 						<div class="chapo">[(#CHAPO)]&nbsp;</div>
 						[(#TEXTE|image_reduire{568})]
 						
