--- a/squelettes/inclure/liste_article_rubrique.html
+++ b/squelettes/inclure/liste_article_rubrique.html
@@ -2,13 +2,34 @@
 <B_article_rubrique>
 #ANCRE_PAGINATION
 <BOUCLE_article_rubrique(ARTICLES){id_rubrique}{pagination}>
-
+[(#LOGO_ARTICLE|image_reduire{200})]
 [<h3><a href="#URL_ARTICLE" title="[(#TITRE|couper{80})]">(#TITRE)</a></h3>]
 
 [(#CHAPO|oui) [<div class="chapo">(#CHAPO)</div>] ]
 [(#CHAPO|non) [<div class="chapo"><p>(#TEXTE|couper{400})</p></div>] ]
 
+[(#REM) Portfolio : album d'images ]
+<B_documents_portfolio>
+<div class="bloc clearfix" id="documents_portfolio">
+	<ul>
+		<BOUCLE_documents_portfolio(DOCUMENTS) {id_article} {mode=document}{extension IN png,jpg,gif} {par num titre, date}{doublons}{vu=non}>[
+		<li>
+			<a href="(#URL_DOCUMENT)" type="#MIME_TYPE" onclick="location.href='[(#URL_ARTICLE|url_absolue
+			|parametre_url{id_document,#ID_DOCUMENT}
+			|ancre_url{documents_portfolio}
+			)]';return false;"[ class="(#EXPOSER)"][ title="(#TITRE|attribut_html|couper{80})"]>[(#FICHIER
+			|image_passe_partout{90,90}
+			|image_recadre{90,90}
+			|inserer_attribut{class,spip_logos}
+			|inserer_attribut{alt,[(#TITRE|attribut_html|couper{80})]})]</a>
+		</li>
+		]</BOUCLE_documents_portfolio>
+	</ul>
+</div><!--#documents_portfolio-->
+</B_documents_portfolio>
+
 [<div class="right"><a href="(#URL_ARTICLE)" title="[(#TITRE|couper{80})]">Lire la suite</a></div>]
+
 <div class="clear"></div>
 
 <div class="separateur"></div>
