--- a/squelettes/calendrier_mini.json.html
+++ b/squelettes/calendrier_mini.json.html
@@ -1,3 +1,3 @@
 #HTTP_HEADER{Content-type:text/javascript;}
-[<BOUCLE_periode(EVENEMENTS){tout}{', '}>
+[<BOUCLE_periode(EVENEMENTS){statut=publie}{', '}>
 [(#ARRAY{id,#ID_EVENEMENT,title,[(#TITRE|html2unicode|unicode2charset|textebrut)],allDay,#EVAL{false},start,#DATE_DEBUT,end,#DATE_FIN,url,calendrier,className,calendrier-couleur6,description,[(#INTRODUCTION|html2unicode|unicode2charset)]}|json_encode)]</BOUCLE_periode>]
