--- a/squelettes/article.html
+++ b/squelettes/article.html
@@ -35,6 +35,7 @@
 						
 						
 						<INCLURE{fond=inclure/evenement, env}>
+						<INCLURE{fond=inclure/documents, env}>
 						<div class="fin_article"><!--logo--></div>
 					</div><!--fin colonne principale-->
 
