--- a/squelettes/inclure/tous_les_evenements.html
+++ b/squelettes/inclure/tous_les_evenements.html
@@ -1,7 +1,7 @@
 <B_info_evenement>
 <h1>Tout les événements</h1>
 <div class="info_evenement">
-	<BOUCLE_info_evenement(EVENEMENTS){id_parent}{age<0}{par date_debut}>
+	<BOUCLE_info_evenement(EVENEMENTS){id_parent}{age<0}{par date_debut} {pagination}>
 	<div class="elementAgenda">
 		[<h3><a href="#URL_ARTICLE" title="[(#TITRE|couper{80})]">(#TITRE)</a></h3>]
 		[<p>(#DATE_DEBUT|Agenda_affdate_debut_fin{#DATE_FIN,#HORAIRE})</p>]
@@ -10,7 +10,7 @@
 		[<div class="right"><a href="(#URL_ARTICLE)" title="[(#TITRE|couper{80})]">» En savoir plus.</a></div>]
 		<div class="clear"></div>
 	</div>
-	[(#COMPTEUR_BOUCLE|!={#TOTAL_BOUCLE}|oui) <div class="separateur"></div> ]
+	[(#COMPTEUR_BOUCLE|modulo{10}|!={0}|et{#COMPTEUR_BOUCLE|!={#GRAND_TOTAL}}) <div class="separateur"></div> ]
 	</BOUCLE_info_evenement>
 </div>
 </B_info_evenement>
