Debug suivant le retour du client

--- a/squelettes/inclure/footer.html
+++ b/squelettes/inclure/footer.html
@@ -12,4 +12,4 @@
 	</div><!--fin sub_footer-->
 </div><!--fin footer-->
 
-<p class="copy">[(#DATE|affdate{Y})] © Vie F&eacute;minine | <a href="mailto:[(#EMAIL_WEBMASTER)]">[(#EMAIL_WEBMASTER)]</a> | t&eacute;l : 02 227 13 00</p>
+<p class="copy">[(#DATE|affdate{Y})] © Vie F&eacute;minine | <a href="mailto:[(#EMAIL_WEBMASTER)]">[(#EMAIL_WEBMASTER)]</a> | t&eacute;l : 02 227 13 00 | <a href="#URL_ECRIRE">Espace privé</a></p>
