--- a/squelettes/inclure/vous.html
+++ b/squelettes/inclure/vous.html
@@ -1,7 +1,7 @@
 <div class="block_rose_lisere"><!--effet volume-->
 </div>
 <div class="block_rose">
-	<h3>Vous y &eacute;tiez</h3>
+	<h3>Vous y &eacute;tiez !</h3>
 
 	<B_vous>
 	<ul>
@@ -20,5 +20,5 @@
 		</BOUCLE_vous>
 	</ul>
 	</B_vous>
-	<div class="suite"><a href="">» Lire la suite</a></div>
+	<div class="suite"><a href="[(#URL_RUBRIQUE{6})]">» Lire la suite</a></div>
 </div><!--fin block_rose-->
