--- a/squelettes/liste_evenement.html
+++ b/squelettes/liste_evenement.html
@@ -32,7 +32,7 @@
 							[<h3><a href="#URL_ARTICLE" title="[(#TITRE|couper{80})]">(#TITRE)</a></h3>]
 							[<p>(#DATE_DEBUT|Agenda_affdate_debut_fin{#DATE_FIN,#HORAIRE})</p>]
 							[<p>(#LIEU)</p>]
-							[(#DESCRIPTIF)]
+							[(#DESCRIPTIF)[(#INTRODUCTION)]]
 							[<div class="right"><a href="(#URL_ARTICLE)" title="[(#TITRE|couper{80})]">» En savoir plus.</a></div>]
 							<div class="clear"></div>
 						</div>
