--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -1,6 +1,6 @@
 [(#REM)
-	Head standard de toutes les pages ;
-	les elements specifiques (title, description) figurent dans chaque squelette
+Head standard de toutes les pages ;
+les elements specifiques (title, description) figurent dans chaque squelette
 ]
 <meta http-equiv="Content-Type" content="text/html; charset=#CHARSET" />
 
@@ -26,9 +26,9 @@
 [<link rel="stylesheet" href="(#CHEMIN{css/perso.css}|direction_css)" type="text/css" />]
 
 [(#REM)
-	Balise permettant aux plugins d'inserer des appels javascript ;
-	4. C'est ici que SPIP va inserer l'appel de la librairie jQuery
-	5. Et appeler a la fin compacte_head pour agreger et compacter tout le head dans des fichiers statiques si l'option est cochee dans Configuration
+Balise permettant aux plugins d'inserer des appels javascript ;
+4. C'est ici que SPIP va inserer l'appel de la librairie jQuery
+5. Et appeler a la fin compacte_head pour agreger et compacter tout le head dans des fichiers statiques si l'option est cochee dans Configuration
 ]
 #INSERT_HEAD
 
@@ -53,3 +53,16 @@
 document.write('<style>.noscript { display: none; }</style>');
 </script>
 <!--gallerie fin-->
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-38601024-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
