Ajoute le descriptif de la rubrique

--- a/squelettes/rubrique.html
+++ b/squelettes/rubrique.html
@@ -34,6 +34,7 @@
 						[(#REM) Sinon, on affiche la liste des articles de la rubriques. ]
 						[(#AGENDA|non) 
 						[<h1>(#TITRE)</h1>]
+						[(#DESCRIPTIF|inserer_attribut{class, chapo})]
 						<INCLURE{fond=inclure/liste_article_rubrique, env}> 
 						]
 
