Correction du design

--- a/squelettes/article.html
+++ b/squelettes/article.html
@@ -33,7 +33,7 @@
 						<div class="chapo">[(#CHAPO)]&nbsp;</div>
 						[(#TEXTE|image_reduire{568})]
 						
-						
+						[(#NOTES)]
 						<INCLURE{fond=inclure/evenement, env}>
 						<INCLURE{fond=inclure/documents, env}>
 						<div class="fin_article"><!--logo--></div>
