--- a/squelettes/inclure/galerie_sommaire.html
+++ b/squelettes/inclure/galerie_sommaire.html
@@ -26,7 +26,7 @@
 						|inserer_attribut{alt,[(#TITRE|attribut_html|couper{80})]})]
 					</a>
 					<div class="caption">
-						<div class="image-desc">#DESCRIPTIF</div>
+						<div class="image-desc">#TITRE</div>
 					</div>
 				</li>
 				</BOUCLE_imgGallerie>
@@ -39,7 +39,7 @@
 
 		<div class="controls_album"   > 
 			<div id="captionToggle"><!-- pour montrer ou cacher la legende de la photo -->
-				<a href="#toggleCaption" class="off" title="Show Caption">Show Caption</a>
+				<a href="#toggleCaption" class="off" title="Montrer la légende">Montrer la légende</a>
 			</div>
 			<div id="controls" class="controls"></div><!-- pour les boutons next et prev -->
 			<div class="album"><a href="#URL_RUBRIQUE{3}">» Voir tous les albums photo</a></div> 
