--- a/squelettes/inclure/liste_article_rubrique.html
+++ b/squelettes/inclure/liste_article_rubrique.html
@@ -5,8 +5,8 @@
 [(#LOGO_ARTICLE|image_reduire{150})]
 [<h3><a href="#URL_ARTICLE" title="[(#TITRE|couper{80})]">(#TITRE)</a></h3>]
 
-[(#CHAPO|oui) [<div class="chapo">(#CHAPO)</div>] ]
-[(#CHAPO|non) [<div class="chapo"><p>(#TEXTE|couper{400})</p></div>] ]
+[(#CHAPO|oui) [<div>(#CHAPO)</div>] ]
+[(#CHAPO|non) [<div><p>(#TEXTE|couper{400})</p></div>] ]
 
 [(#REM) Portfolio : album d'images ]
 <B_documents_portfolio>
