Lien vers viefeminine.be sur le logo

--- a/squelettes/inclure/vie_feminine.html
+++ b/squelettes/inclure/vie_feminine.html
@@ -4,7 +4,7 @@
 	<h3>Vie F&eacute;minine</h3>
 	<B_vie_feminine>
 	<BOUCLE_vie_feminine(ARTICLES){id_rubrique=5}{par date}{0,1}>
-	[(#LOGO_ARTICLE|image_passe_partout{164,73}|image_recadre{164,73,center})]
+	[<a href="http://www.viefeminine.be/" title="Vie Féminie">(#LOGO_ARTICLE|image_passe_partout{164,73}|image_recadre{164,73,center})</a>]
 	[<p>(#CHAPO|couper{235})</p>]
 	<div class="suite"><a href="#URL_ARTICLE" title="[(#TITRE|couper{80})]">» Lire la suite</a></div>
 	</BOUCLE_vie_feminine>
