--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -53,3 +53,6 @@ Balise permettant aux plugins d'inserer des appels javascript ;
 document.write('<style>.noscript { display: none; }</style>');
 </script>
 <!--gallerie fin-->
+
+<!-- Autosubmit form -->
+<script type="text/javascript" src="#CHEMIN{js/autoSubmit.js}"></script>
