Limiter l'affichage des événements

--- a/squelettes/inclure/agenda_caravelle.html
+++ b/squelettes/inclure/agenda_caravelle.html
@@ -6,7 +6,7 @@
 	
 	<B_enevement>
 	<ul>
-		<BOUCLE_enevement(EVENEMENTS){age<0}{par date_debut}>
+		<BOUCLE_enevement(EVENEMENTS){age<0}{par date_debut} {0,5}>
 		<li>
 			<a href="#URL_ARTICLE" title="[(#TITRE|couper{80})]">
 				[(#DATE_DEBUT|Agenda_affdate_debut_fin{#DATE_FIN,#HORAIRE})]
