Récupération des modifications faite en direct sur le site

--- a/squelettes/inclure/footer.html
+++ b/squelettes/inclure/footer.html
@@ -2,8 +2,8 @@
 	<div class="sub_footer"><!--pour centrer-->
 		<div class="sub_footer_background"><!--pour afficher le background-->
 			<B_sponsor>
-			<BOUCLE_sponsor(ARTICLES){id_rubrique=4}{par num titre}>
-			[(#LOGO_ARTICLE|vider_attribut{class})]
+			<BOUCLE_sponsor(ARTICLES){id_article=83}>
+				#TEXTE
 			</BOUCLE_sponsor>
 			</B_sponsor>
 		</div><!--fin sub_footer_background-->
